--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,5 @@
-:root {
-    --primary: #ccdad1;
-    --secondary: #9caea9;
-    --tertiary: #788585;
-    --light-dark: #6f6866;
-    --dark: #38302e;
-    --border-radius: .3rem;
+body {
+    color: #ccdad1;
   }
 
-  h3 {
-    color: var(--primary);
-  }
   
